fixing image bugs

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,10 +1,10 @@
 ---
 layout: 'base.html'
 description: "Meta description for the page"
-meta-title: 'Title that shows up on google searches'
+metaTitle: 'Title that shows up on google searches'
 tagTitle: 'About'
-preloadImg: 'cabinets2-1920w.webp'
-preloadCSS: 'about.css'
+preloadImg: '/images/cabinets2-1920w.webp'
+preloadCSS: '/css/about.css'
 permalink: 'about/'
 eleventyNavigation:
     key: About Us
@@ -18,8 +18,8 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">About Us</h1>
-    {% image '/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
+  <h1 id="home-h">About Us</h1>
+  {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -27,33 +27,33 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="sbs">
-    <div class="cs-container">
-        <!-- Left Image Section -->
-        <div class="cs-left">
-            {% image '/images/cabinets2.jpg', 'cabinets', 'cs-picture cs-picture1', 'lazy'%}
-            {% image '/images/construction.jpg', 'house', 'cs-picture cs-picture2', 'lazy'%}
-        </div>
-        <!-- Right Content Section-->
-        <div class="cs-right">
-            <span class="cs-topper">About Us</span>
-            <h2 class="cs-title">About Company Title</h2>
-            <p class="cs-text">
+  <div class="cs-container">
+    <!-- Left Image Section -->
+    <div class="cs-left">
+      {% image './src/images/cabinets2.jpg', 'cabinets', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/construction.jpg', 'house', 'cs-picture cs-picture2', 'lazy'%}
+    </div>
+    <!-- Right Content Section-->
+    <div class="cs-right">
+      <span class="cs-topper">About Us</span>
+      <h2 class="cs-title">About Company Title</h2>
+      <p class="cs-text">
                 In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
             </p>
-            <p class="cs-text">
+      <p class="cs-text">
                 In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
             </p>
-            <div class="cs-flex-group">
-                <p class="cs-flex-p">
+      <div class="cs-flex-group">
+        <p class="cs-flex-p">
                     In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
                 </p>
-                <span class="cs-name">Justin Time</span>
-                <span class="cs-job">CEO-Founder</span>
-                <img class="cs-quote-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="gavel" width="136" height="77">
-            </div>
-            <a href="" class="button-solid">More About Us</a>
-        </div>
+        <span class="cs-name">Justin Time</span>
+        <span class="cs-job">CEO-Founder</span>
+        <img class="cs-quote-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="gavel" width="136" height="77">
+      </div>
+      <a href="" class="button-solid">More About Us</a>
     </div>
+  </div>
 </section>
 
 <!-- ============================================ -->
@@ -61,12 +61,12 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="cta">
-    <div class="container">
-        <h2 class="title">Get It Done <br> With Us Today</h2>
-        <p>
+  <div class="container">
+    <h2 class="title">Get It Done <br> With Us Today</h2>
+    <p>
             Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
         </p>
-        <a href="/contact.html" class="button-solid">Free Estimate</a>
-    </div>
-    {% image '/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920'%}
+    <a href="/contact.html" class="button-solid">Free Estimate</a>
+  </div>
+  {% image './src/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920'%}
 </section>
