--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -3,8 +3,8 @@ layout: 'base.html'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Contact'
-preloadImg: 'cabinets2-1920w.webp'
-preloadCSS: 'contact.css'
+preloadImg: '/images/cabinets2-1920w.webp'
+preloadCSS: '/css/contact.css'
 permalink: 'contact/'
 eleventyNavigation:
     key: Contact
@@ -18,8 +18,8 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">Contact Us</h1>
-    {% image '/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  <h1 id="home-h">Contact Us</h1>
+  {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -27,50 +27,50 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="cs-contact">
-    <div class="cs-container">
-        <form id="cs-form" name="Contact Form" method="post">
-            <div class="cs-content">
-                <span class="cs-topper">Contact</span>
-                <h2 class="cs-title">Get in Touch</h2>
-                <p class="cs-text">
+  <div class="cs-container">
+    <form id="cs-form" name="Contact Form" method="post">
+      <div class="cs-content">
+        <span class="cs-topper">Contact</span>
+        <h2 class="cs-title">Get in Touch</h2>
+        <p class="cs-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ridiculus elementum ullamcorper ipsum porttitor aliquam. Id magna urna ultrices odio pulvinar. Sed ut.
                 </p>
-            </div>
-            <label>
+      </div>
+      <label>
                 Name
                 <input required type="text" id="name" name="name" placeholder="Name">
-            </label>
-            <label>
+      </label>
+      <label>
                 Email
                 <input required type="text" id="email" name="email" placeholder="Email">
-            </label>
-            <label>
+      </label>
+      <label>
                 Phone
                 <input required type="text" id="phone" name="phone" placeholder="Phone">
-            </label>
-            <label>
+      </label>
+      <label>
                 How Did You Find Us
                 <input type="text" id="find" name="find-us" placeholder="How did you find us?">
-            </label>
-            <label class="cs-label-message">
+      </label>
+      <label class="cs-label-message">
                 Message
                 <textarea required name="Message" id="message" placeholder="Write message..."></textarea>
-            </label>
-            <button class="cs-button-solid" type="submit">Submit Message</button>
-        </form>
-        <div class="cs-right-section">
-            <!--Email-->
-            <span class="cs-header">Email</span>
-            <a class="cs-link" href="mailto:support@yourdomain.com">support@yourdomain.com</a>
-            <!--Phone-->
-            <span class="cs-header">Phone</span>
-            <a class="cs-link" href="tel:219-555-1234">(219) 555-1234</a>
-            <!--Address-->
-            <span class="cs-header">Address</span>
-            <a class="cs-link" href="">2553 Woodbridge Lane, <span class="cs-block">Boston Ware 120</span></a>
+      </label>
+      <button class="cs-button-solid" type="submit">Submit Message</button>
+    </form>
+    <div class="cs-right-section">
+      <!--Email-->
+      <span class="cs-header">Email</span>
+      <a class="cs-link" href="mailto:support@yourdomain.com">support@yourdomain.com</a>
+      <!--Phone-->
+      <span class="cs-header">Phone</span>
+      <a class="cs-link" href="tel:219-555-1234">(219) 555-1234</a>
+      <!--Address-->
+      <span class="cs-header">Address</span>
+      <a class="cs-link" href="">2553 Woodbridge Lane, <span class="cs-block">Boston Ware 120</span></a>
 
-            <!-- Background Image-->
-            {% image '/images/skyscraper.jpg', 'building', '', 'lazy'%}
-        </div>
+      <!-- Background Image-->
+      {% image './src/images/skyscraper.jpg', 'building', '', 'lazy'%}
     </div>
+  </div>
 </section>
