--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -3,8 +3,8 @@ layout: 'base.html'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on OG social Media Title Tag'
 tagTitle: 'Reviews'
-preloadImg: 'cabinets2-1920w.webp'
-preloadCSS: 'reviews.css'
+preloadImg: '/images/cabinets2-1920w.webp'
+preloadCSS: '/css/reviews.css'
 permalink: 'reviews/'
 eleventyNavigation:
     key: Reviews
@@ -17,8 +17,8 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">Our Reviews</h1>
-    {% image '/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  <h1 id="home-h">Our Reviews</h1>
+  {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -26,92 +26,92 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="reviews">
-    <div class="container">
-        <div class="review">
-            <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-            </picture>
-            <p>
+  <div class="container">
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
                 </p>
-            <div class="star-group">
-                <span class="name">B Miller<span class="desc">Homeowner</span></span>
-                <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
-                </picture>
-            </div>
-        </div>
-        <div class="review">
-            <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-            </picture>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
-                </p>
-            <div class="star-group">
-                <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
-                <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
-                </picture>
-            </div>
-        </div>
-        <div class="review">
-            <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-            </picture>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
-                </p>
-            <div class="star-group">
-                <span class="name">Alex L.<span class="desc">Homeowner</span></span>
-                <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
-                </picture>
-            </div>
-        </div>
-        <div class="review">
-            <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile-woman.svg" alt="" width="99" height="99">
-            </picture>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
-                </p>
-            <div class="star-group">
-                <span class="name">Arrieana M.<span class="desc">Homeowner</span></span>
-                <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
-                </picture>
-            </div>
-        </div>
-        <div class="review">
-            <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-            </picture>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
-                </p>
-            <div class="star-group">
-                <span class="name">Leo N.<span class="desc">Homeowner</span></span>
-                <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
-                </picture>
-            </div>
-        </div>
-        <div class="review">
-            <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-            </picture>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
-                </p>
-            <div class="star-group">
-                <span class="name">Brian A.<span class="desc">Homeowner</span></span>
-                <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
-                </picture>
-            </div>
-        </div>
+      <div class="star-group">
+        <span class="name">B Miller<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
     </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Alex L.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile-woman.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Arrieana M.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Leo N.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Brian A.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!-- ============================================ -->
@@ -119,13 +119,13 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="cta">
-    <div class="container">
-        <h2 class="title">Get It Done <br> With Us Today</h2>
-        <p>
+  <div class="container">
+    <h2 class="title">Get It Done <br> With Us Today</h2>
+    <p>
             Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
         </p>
-        <a href="/contact.html" class="button-solid">Free Estimate</a>
-    </div>
-    {% image '/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+    <a href="/contact.html" class="button-solid">Free Estimate</a>
+  </div>
+  {% image './src/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 
 </section>
