css change path

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@ description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Pixel Perfect Websites'
 preloadImg: '/images/landing-1920w.webp'
-preloadCSS: '/css/local.css'
+pageCSS: 'local.css'
 permalink: '/'
 eleventyNavigation:
   key: Home
