css and canonical updates

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 ---
 layout: 'base.html'
+canonical: 'https://example.app'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Pixel Perfect Websites'
@@ -34,8 +35,7 @@ eleventyNavigation:
           src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg"
           alt="play icon"
           width="17"
-          height="17"
-/>
+          height="17">
         Learn More
       </a>
     </div>
@@ -59,8 +59,7 @@ eleventyNavigation:
         src="/assets/svgs/service1.svg"
         alt="appliance"
         width="48"
-        height="48"
-/>
+        height="48">
     </picture>
     <h2>Service 1</h2>
     <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
@@ -73,8 +72,7 @@ eleventyNavigation:
         src="/assets/svgs/service2.svg"
         alt="appliance"
         width="48"
-        height="48"
-/>
+        height="48">
     </picture>
     <h2>Service 2</h2>
     <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
@@ -87,8 +85,7 @@ eleventyNavigation:
         src="/assets/svgs/service3.svg"
         alt="appliance"
         width="48"
-        height="48"
-/>
+        height="48">
     </picture>
     <h2>Service 3</h2>
     <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
@@ -134,8 +131,7 @@ eleventyNavigation:
           src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
           alt="gavel"
           width="136"
-          height="77"
-/>
+          height="77">
       </div>
       <a href="/about" class="button-solid">More About Us</a>
     </div>
@@ -234,8 +230,7 @@ eleventyNavigation:
           src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/profile5.png"
           alt="profile picture"
           width="80"
-          height="80"
-/>
+          height="80">
         <p class="cs-item-p">
           Dictum dolor, nullam morbi sem in auctor proin. Consequat dolor habitasse nam sed tempor. Viverra magna
           pharetra rhoncus, nec sed ullamcorper lectus et. Auctor velit diam fermentum consequat. Feugiat viverra massa
@@ -253,8 +248,7 @@ eleventyNavigation:
           src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
           alt="stars"
           width="96"
-          height="16"
-/>
+          height="16">
       </li>
       <!-- Review 2 -->
       <li class="cs-item">
@@ -266,8 +260,7 @@ eleventyNavigation:
           src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/profile-4.png"
           alt="profile picture"
           width="80"
-          height="80"
-/>
+          height="80">
         <p class="cs-item-p">
           Dictum dolor, nullam morbi sem in auctor proin. Consequat dolor habitasse nam sed tempor. Viverra magna
           pharetra rhoncus, nec sed ullamcorper lectus et. Auctor velit diam fermentum consequat. Feugiat viverra massa
@@ -285,8 +278,7 @@ eleventyNavigation:
           src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
           alt="stars"
           width="96"
-          height="16"
-/>
+          height="16">
       </li>
     </ul>
     <a aria-label="read more reviews" href="/reviews" class="button-solid">Read More</a>
@@ -299,7 +291,7 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Get It Done <br/>
+      Get It Done <br>
       With Us Today
     </h2>
     <p>
