--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -1,10 +1,11 @@
 ---
 layout: 'base.html'
+canonical: 'https://example.app/blog/'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Blog'
 preloadImg: '/images/cabinets2-1920w.webp'
-preloadCSS: '/css/blog.css'
+pageCSS: 'blog.css'
 permalink: 'blog/'
 eleventyNavigation:
     key: Blog
