--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -1,10 +1,11 @@
 ---
 layout: 'base.html'
+canonical: 'https://example.app/projects/'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Projects'
 preloadImg: '/images/cabinets2-1920w.webp'
-preloadCSS: '/css/projects.css'
+pageCSS: 'projects.css'
 permalink: 'projects/'
 eleventyNavigation:
     key: Projects
