--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -1,10 +1,11 @@
 ---
 layout: 'base.html'
+canonical: 'https://example.app/reviews/'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on OG social Media Title Tag'
 tagTitle: 'Reviews'
 preloadImg: '/images/cabinets2-1920w.webp'
-preloadCSS: '/css/reviews.css'
+pageCSS: 'reviews.css'
 permalink: 'reviews/'
 eleventyNavigation:
     key: Reviews
