source local files

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@ eleventyNavigation:
           class="cs-img"
           loading="lazy"
           decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg"
+          src="/assets/svgs/play.svg"
           alt="play icon"
           width="17"
           height="17">
@@ -128,7 +128,7 @@ eleventyNavigation:
           class="cs-quote-icon"
           loading="lazy"
           decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
+          src="/assets/svgs/quote.svg"
           alt="gavel"
           width="136"
           height="77">
@@ -245,7 +245,7 @@ eleventyNavigation:
           aria-hidden="true"
           loading="lazy"
           decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
+          src="/assets/svgs/stars.svg"
           alt="stars"
           width="96"
           height="16">
@@ -275,7 +275,7 @@ eleventyNavigation:
           aria-hidden="true"
           loading="lazy"
           decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
+          src="/assets/svgs/stars.svg"
           alt="stars"
           width="96"
           height="16">
