Fix Contact Image

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -70,7 +70,7 @@ eleventyNavigation:
       <a class="cs-link" href="">2553 Woodbridge Lane, <span class="cs-block">Boston Ware 120</span></a>
 
       <!-- Background Image-->
-      {% image './src/images/skyscraper.jpg', 'building', '', 'lazy'%}
+      {% image './src/images/skyscraper.jpg', 'building', 'cs-bg-picture', 'lazy'%}
     </div>
   </div>
 </section>
